--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install coveralls
 
 script:
-  - coverage run -m py.test -W ignore::DeprecationWarning -rxXs
+  - coverage run -m pytest .
 
 after_success:
   - coveralls
