--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install coveralls
 
 script:
-  - coverage run -m pytest .
+  - coverage run -m pytest
 
 after_success:
   - coveralls
